* Add VError * Update card schema to allow objects or arrays * Hand logic updates * general cleaning
